--- a/app/assets/stylesheets/mailbox.scss
+++ b/app/assets/stylesheets/mailbox.scss
@@ -15,10 +15,6 @@ ul.delete-conversation-wrapper {
 		}
 	}
 }
-.inbox-folder-wrapper {
-	margin-left: 0px;
-	margin-right: 0px;
-}
 .inbox-folder {
 	.compose-btn {
 		text-align: left;
